tests/snapshots/compile_file__repeated_bind_rule.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/repeated_bind_rule.hvm
---
Warnings:
In definition 'Foo':
  Repeated bind in pattern matching rule: 'a'.

@Foo = (* (a a))

@main = a
  & @Foo ~ (#1 (#2 a))
