tests/snapshots/compile_file__unscoped_supercombinator.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/unscoped_supercombinator.hvm
---
@Foo = ((@Foo$C1 (@Foo$C0 a)) a)

@Foo$C0 = (a ((a b) b))

@Foo$C1 = (a ((a b) b))

@main = a
  & @Foo ~ (* a)
