tests/snapshots/compile_file__warn_and_err.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/warn_and_err.hvm
---
Warnings:
In definition 'Foo':
  Repeated bind in pattern matching rule: 'a'.

Errors:
In definition 'Main':
  Unbound variable 'a'.
